--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -11,9 +11,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp">
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/item_store_name"
@@ -21,28 +21,28 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:text="Nom"
 
-            android:textSize="20sp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            android:text="Nom"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/time_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toLeftOf="@+id/item_time"
-            app:srcCompat="@mipmap/ic_access_time_black_24dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/item_store_name" />
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintLeft_toLeftOf="@+id/item_store_name"
+            app:layout_constraintRight_toLeftOf="@+id/item_time"
+            app:layout_constraintTop_toBottomOf="@+id/item_store_name"
+            app:srcCompat="@mipmap/ic_access_time_black_24dp" />
 
         <TextView
             android:id="@+id/item_time"
@@ -50,65 +50,122 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_name"
 
-            android:text="Time"
-            app:layout_constraintLeft_toRightOf="@+id/time_icon"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/time_icon"
-            android:layout_marginTop="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/time_icon"
             android:layout_marginBottom="0dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:text="Time"
+            app:layout_constraintBottom_toBottomOf="@+id/time_icon"
+            app:layout_constraintLeft_toRightOf="@+id/time_icon"
+            app:layout_constraintRight_toRightOf="@+id/item_store_name"
+            app:layout_constraintTop_toTopOf="@+id/time_icon"
             app:layout_constraintVertical_bias="0.5" />
 
         <View
             android:id="@+id/item_separator"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/time_icon" />
 
 
+        <View
+            android:id="@+id/item_separarator_v"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_separator" />
+
         <TextView
             android:id="@+id/actual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="Actual"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/disponible"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/item_separator"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintVertical_bias="0.52" />
+            app:layout_constraintRight_toLeftOf="@+id/textView_actual"
+            app:layout_constraintTop_toBottomOf="@+id/item_separator" />
 
+
+        <TextView
+            android:id="@+id/textView_actual"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/disponible_turn_design"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="15"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/actual"
+            app:layout_constraintRight_toLeftOf="@+id/item_separarator_v"
+            app:layout_constraintTop_toBottomOf="@+id/item_separator" />
 
         <TextView
             android:id="@+id/disponible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="Disponible"
-            app:layout_constraintLeft_toRightOf="@+id/actual"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintLeft_toRightOf="@+id/item_separarator_v"
+            app:layout_constraintRight_toLeftOf="@+id/textView_disponible"
+            app:layout_constraintTop_toBottomOf="@+id/item_separator"
+            app:layout_constraintVertical_bias="0.5"
             tools:layout_conversion_absoluteHeight="30dp"
             tools:layout_conversion_absoluteWidth="100dp"
             tools:layout_conversion_absoluteX="215dp"
-            tools:layout_conversion_absoluteY="84dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/actual" />
+            tools:layout_conversion_absoluteY="84dp" />
+
+        <TextView
+            android:id="@+id/textView_disponible"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/disponible_turn_design"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="30"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/disponible"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_separator"
+            app:layout_constraintVertical_bias="0.5" />
 
 
     </android.support.constraint.ConstraintLayout>
