--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -29,13 +29,13 @@
         android:layout_marginTop="24dp" />
 
     <TextView
-        android:id="@+id/actualTurnText"
+        android:id="@+id/disponibleTurnText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="24dp"
-        android:text="TORN ACTUAL"
+        android:text="TORN DISPONIBLE"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/disponibleTurn"
@@ -54,7 +54,7 @@
         android:background="@android:color/darker_gray"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actualTurnText"
+        app:layout_constraintTop_toBottomOf="@+id/disponibleTurnText"
         tools:layout_conversion_absoluteHeight="1dp"
         tools:layout_conversion_absoluteWidth="264dp"
         tools:layout_conversion_absoluteX="60dp"
@@ -82,13 +82,13 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/disponibleTurnText"
+        android:id="@+id/actualTurnText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="24dp"
-        android:text="TORN DISPONIBLE"
+        android:text="TORN ACTUAL"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -113,7 +113,7 @@
         tools:layout_conversion_absoluteX="157dp"
         tools:layout_conversion_absoluteY="480dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/disponibleTurnText" />
+        app:layout_constraintTop_toBottomOf="@+id/actualTurnText" />
 
     <TextView
         android:id="@+id/time"
