--- a/app/src/main/res/layout/activity_user_turn_info.xml
+++ b/app/src/main/res/layout/activity_user_turn_info.xml
@@ -60,7 +60,7 @@
                     android:textSize="30dp" />
 
                 <TextView
-                    android:id="@+id/actualTurnText"
+                    android:id="@+id/disponibleTurnText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/actualTurn"
