--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -87,9 +87,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="23dp"
         android:text="TORN ACTUAL"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actualTurn"
@@ -99,69 +98,56 @@
         tools:layout_conversion_absoluteY="185dp" />
 
     <TextView
-        android:id="@+id/timeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
-        android:text="TEMPS"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/time"
-        tools:layout_conversion_absoluteHeight="16dp"
-        tools:layout_conversion_absoluteWidth="45dp"
-        tools:layout_conversion_absoluteX="157dp"
-        tools:layout_conversion_absoluteY="480dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/actualTurnText" />
-
-    <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
+        android:layout_width="62dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="9dp"
-        android:layout_marginRight="8dp"
         android:text="10 Minuts"
-        app:layout_constraintLeft_toRightOf="@+id/timeText"
-        app:layout_constraintRight_toRightOf="parent"
         tools:layout_conversion_absoluteHeight="16dp"
         tools:layout_conversion_absoluteWidth="61dp"
         tools:layout_conversion_absoluteX="212dp"
         tools:layout_conversion_absoluteY="480dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/timeText" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/queueText"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/actualTurnText"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/actualTurnText" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/queueText"
-        app:layout_constraintTop_toBottomOf="@+id/timeText"
+        app:layout_constraintRight_toLeftOf="@+id/time"
         app:srcCompat="@mipmap/ic_access_time_black_24dp"
         tools:layout_conversion_absoluteHeight="24dp"
         tools:layout_conversion_absoluteWidth="24dp"
         tools:layout_conversion_absoluteX="122dp"
-        tools:layout_conversion_absoluteY="473dp" />
+        tools:layout_conversion_absoluteY="473dp"
+        app:layout_constraintHorizontal_bias="0.941"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/queueText"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/actualTurnText" />
 
     <TextView
         android:id="@+id/queueText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cua per davant"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        app:layout_constraintRight_toLeftOf="@+id/queue"
         tools:layout_conversion_absoluteHeight="16dp"
         tools:layout_conversion_absoluteWidth="94dp"
         tools:layout_conversion_absoluteX="122dp"
         tools:layout_conversion_absoluteY="418dp"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        android:layout_marginBottom="0dp" />
+        android:layout_marginLeft="0dp"
+        app:layout_constraintRight_toLeftOf="@+id/queue"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBaseline_toBaselineOf="@+id/queue"
+        app:layout_constraintLeft_toLeftOf="@+id/time" />
 
     <TextView
         android:id="@+id/queue"
@@ -172,11 +158,15 @@
         tools:layout_conversion_absoluteWidth="52dp"
         tools:layout_conversion_absoluteX="221dp"
         tools:layout_conversion_absoluteY="418dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/time"
+        android:layout_marginLeft="14dp"
+        app:layout_constraintLeft_toLeftOf="@+id/time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintVertical_bias="0.736"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/queueText"
-        app:layout_constraintLeft_toLeftOf="@+id/queueText" />
+        app:layout_constraintRight_toLeftOf="@+id/getTurnBtn" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/getTurnBtn"
