--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_store_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.admin.e_torn.StoreInfoActivity"
+    tools:context="com.example.admin.e_torn.activities.StoreInfoActivity"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
